--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#url for connection
+spring.datasource.url=jdbc:mysql://localhost:3306/sakila
+#credentials
+spring.datasource.username=root
+spring.datasource.password=root
+#show sql code
+spring.jpa.show-sql=true
 
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#setting the server port
+#server.port=8080
